--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "colornames": "^1.1.1",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
