--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "axios": "^1.6.2",
     "colornames": "^1.1.1",
     "date-fns": "^2.30.0",
+    "easy-peasy": "^6.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
